; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_tarith.c_png_log8bit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_tarith.c_png_log8bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@L2INV = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @png_log8bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @png_log8bit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp ugt i32 %4, 0
  br i1 %5, label %6, label %16

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = uitofp i32 %7 to double
  %9 = fdiv double %8, 2.550000e+02
  %10 = fptoui double %9 to i32
  %11 = call double @log(i32 %10)
  %12 = load double, double* @L2INV, align 8
  %13 = fmul double %11, %12
  %14 = fsub double 5.000000e-01, %13
  %15 = call i32 @floor(double %14)
  store i32 %15, i32* %2, align 4
  br label %17

16:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %6
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @floor(double) #1

declare dso_local double @log(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
